[ios-sdk] Usability fixes to SwitchUserSample
Summary:
Addressed a few bugs/requests:
1. Profile picture view was not using Large pictures, and was being autosized poorly on iPad.
2. Split Settings table into two sections, one for Primary User and one for Guest Users,
to illustrate how to treat them differently.
3. Display "Logging in..." after a user clicks on a profile in the Settings page.
4. The "Primary User" attempts to login via SSO, while "Guest Users" will use login dialog.
5. Log in the primary user (if any) when app starts.

** Also found two places in SDK where autorelease strings were being released, causing
occasional access violations (particularly when app went to background for SSO auth).

Test Plan:
- Ran the SwitchUserSample in simulator
- Verified pictures look sized properly
- Logged in and out various users, ensured "Logging in..." and logged-in checkmarks
appearing correctly.
- Verified Primary User login uses SSO, others use login dialog.
- Restart app, verify primary user info displayed in first tab.

Reviewers: jacl, vijaye, mmarucheck, gregschechte

Reviewed By: mmarucheck

Differential Revision: https://phabricator.fb.com/D459230

Task ID: 1038754

--- a/samples/SwitchUserSample/SwitchUserSample/SUUsingViewController_iPhone.xib
+++ b/samples/SwitchUserSample/SwitchUserSample/SUUsingViewController_iPhone.xib
@@ -41,6 +41,7 @@
 						<string key="NSFrame">{{20, 20}, {280, 31}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="86048327"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -68,9 +69,10 @@
 					<object class="IBUILabel" id="801206618">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 197}, {280, 31}}</string>
+						<string key="NSFrame">{{20, 215}, {280, 31}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -88,9 +90,10 @@
 					<object class="IBUIView" id="86048327">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 59}, {136, 130}}</string>
+						<string key="NSFrame">{{20, 59}, {150, 150}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="801206618"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -105,6 +108,7 @@
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="838902419"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
