Have JustRequestSample show all the results it receives
Summary:
This was bugging me:  JustRequestSample supports comma separated list of IDs to do a multi request with.  However, it was only showing the first result.  Fixed that.

Also modified the placeholder text in the text input box to hint that multiple requests can be asked for.

Test Plan: iphone and ipad versions.  Multiple requests and single requests, with existent and non-existent user ids.

Reviewers: mmarucheck, clang, jacl

Reviewed By: jacl

Differential Revision: https://phabricator.fb.com/D465891

--- a/samples/JustRequestSample/JustRequestSample/en.lproj/JRViewController_iPad.xib
+++ b/samples/JustRequestSample/JustRequestSample/en.lproj/JRViewController_iPad.xib
@@ -2,7 +2,7 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1280</int>
-		<string key="IBDocument.SystemVersion">11D50b</string>
+		<string key="IBDocument.SystemVersion">11D50d</string>
 		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
 		<string key="IBDocument.AppKitVersion">1138.32</string>
 		<string key="IBDocument.HIToolboxVersion">568.00</string>
@@ -51,7 +51,7 @@
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<string key="IBUIText"/>
 						<int key="IBUIBorderStyle">3</int>
-						<string key="IBUIPlaceholder">Enter object id (eg. 4)</string>
+						<string key="IBUIPlaceholder">Enter object ids (eg. 4,6)</string>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MAA</bytes>
